<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Manager</string>
    <string name="title_contact_detail">Contact Detail</string>
    <string name="title_activity_main_menu">Contact Manager - Main Menu</string>
    <string name="action_settings">Settings</string>
    <string name="new_cont">Add New Contact</string>
    <string name="view_list">View Contact List</string>
    <string name="help_info">About</string>
    <string name="next">Next</string>
    <string name="title_activity_add_new_contact1">Enter the contact\'s name</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name(s)</string>
    <string name="last_name">Last name</string>
    <string name="back">Back</string>
    <string name="title_activity_add_new_contact2">Enter contact information</string>
    <string name="mobile_phone">Mobile ph. #</string>
    <string name="home_phone">Home ph. #</string>
    <string name="work_phone">Work ph. #</string>
    <string name="email_address">Email address</string>
    <string name="home_address">Home address</string>
    <string name="title_activity_list">Contact List</string>
    <string name="title_activity_add_new_contact_photo">Add a photo</string>
    <string name="request_photo">Would you like to add a photo?</string>
    <string name="yes">Yes</string>
    <string name="not_now">Not right now</string>
    <string name="list_name">List of Contacts</string>
    <string name="sort_firstname">Sort by first name</string>
    <string name="sort_lastname">Sort by last name</string>
    <string name="return_menu">Return to Main menu</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_contact_detail">ContactDetail</string>
    <string name="contact_detail_header">Contact Information</string>
    <string name="edit_button">Edit</string>
    <string name="delete">Delete Contact</string>
    <string name="toggle_capital">Toggle Auto-capitalisation</string>
    <string name="title_activity_main">AboutActivity</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
