<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddNewContact2" >

    <EditText
        android:id="@+id/mobile_phone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:hint="@string/mobile_phone"
        android:inputType="phone"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/home_phone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/home_phone"
        android:inputType="phone"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/work_phone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/work_phone"
        android:inputType="phone"
        android:maxLines="1"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/home_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/home_address"
        android:inputType="textEmailAddress"
        android:singleLine="false" />

    <Button
        android:id="@+id/button_next_add2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/next"/>

    <Button
        android:id="@+id/button_back_add2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/back" />

</LinearLayout>