<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ListActivity" >

    <ListView
        android:id="@+id/list_view"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/list_name" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/sort_firstname"
            android:text="@string/sort_firstname" 
            
            style="@style/ListButtonStyle" />
                
        <Button
            android:id="@+id/sort_lastname"
            android:text="@string/sort_lastname" 
            
            style="@style/ListButtonStyle" />
        
        <Button
            android:id="@+id/return_menu"
            android:text="@string/return_menu"
            
            android:textColor="#ff0000"
            
            style="@style/ListButtonStyle" />
        
        
        
        
        
        
        
        
        
    </LinearLayout>
    
</LinearLayout>
